# Test

BackEnd/: db.sqlite3  pyproject.toml
BackEnd/contract/: models.py
BackEnd/contract/api/: ContractView.py  LoginView.py  serializer.py  urls.py
BackEnd/contract/migrations/: 0001_initial.py  0002_contract_user.py
BackEnd/core/: settings.py  urls.py
